added questions to index file; declared and assigned values for first, last and full name; and declared and assigned lucky number variable git status clear

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,5 +8,8 @@
     <h1>Unit 2 Assignment - Part 1</h1>
     <p>See console for output.</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
+    <p>Should I always start the .js console log with console.log( 'js' ); to indicate the JavaScript file has been sourced into the HTML?</p>
+    <p>Best practice for JavaScript, should I use single ' ' or double " " quotes? I researched it and found different answers.</p>
+  
   </body>
 </html>
